examples/eyre_output.run.stderr
Error: examples/eyre_output.rs:4:9: kaboom

Location:
    examples/eyre_output.rs:4:5
